Grace/tests/gibbs/errors/t247.grace
// ERROR = P1001
if(true) then {
